--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d5e3a05139.js" crossorigin="anonymous"></script>   
+    
     <link rel="stylesheet" href="styles.css">
     <title>Theo Diniz</title>
     
@@ -30,7 +31,7 @@
     </nav>
     </header>
     <main>
-        <section class = "profile  shadow p-4 mb-4 bg-white rounded">
+        <section class = "section profile  shadow  bg-white rounded">
             <div class="sectionTitle"><h2>Perfil</h2></div>
             <div>
                 <div class = "sidepfp ">
@@ -48,47 +49,105 @@
                 </div>
             </div>            
         </section>
-        <section class = "profile  shadow p-4 mb-4 bg-white rounded">
+        <section class = "section profile  shadow bg-white rounded">
             <div class = "sectionTitle"><h2>Repositórios</h2></div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+            <div class="card border-primary mb-3" style="width: 18rem;">
+                <img src="imgs/cards/cardsimpledbb.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">simpledb</h5>
-                  <p class="card-text">Uma base de dados non-sql simples para a matéria "Sistemas Operacionais" na PUC Minas. Feito em C++</p>
+                  <p class="card-text">Uma base de dados non-sql simples para a matéria "Sistemas Operacionais" na PUC Minas. Feito em C++.</p>
                   <a href="https://github.com/theokiwi/simpledb" class="card-link">Conheça</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card border-primary mb-3" style="width: 18rem;">
+                <img src="imgs/cards/cardrockpaperscissors.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">rockpaperscissors-patterns</h5>
                   <p class="card-text">Um jogo de pedra, papel e tesoura construído para praticar design patterns. Apresenta os patterns: Observer, Singleton, Strategy, Factory.</p>
                   <a href="https://github.com/theokiwi/rockpaperscissors-patterns" class="card-link">Conheça</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card border-primary mb-3" style="width: 18rem;">
+                <img src="imgs/cards/cardti3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">ti-3-jogosdigitais</h5>
                   <p class="card-text">Projeto de simulador de restaurante interdisciplinar, feito para a matéria "Trabalho Interdisciplinar III" na PUC Minas.</p>
                   <a href="https://github.com/theokiwi/TI-3-JogosDigitais" class="card-link">Conheça</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Conheça</a>                
+              <div class="card border-primary mb-3" style="width: 18rem;">
+                <img src="imgs/cards/cardpersonalwebsite.png" class="card-img-top" alt="...">
+                <div class="card-body ">
+                  <h5 class="card-title">personal-website</h5>
+                  <p class="card-text">Meu primeiro site, uma página Web pessoal. Construída com: CSS, HTML, Bootstrap, JavaScript.</p>
+                  <a href="https://github.com/theokiwi/personalwebsite" class="card-link">Conheça</a>                
                 </div>
               </div>
         </section>
-        <section class = "profile  shadow p-4 mb-4 bg-white rounded">
-            <div class="sectionTitle"><h2>Interesses Pessoais</h2></div>
-
-            <!-- trem do carousel -->
+        <section class = "section profile  shadow  bg-white rounded">
+            <div class="sectionTitle"><h2>Conteúdo Sugerido</h2></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                <div class="col-md-12">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="imgs/carousel/slayingthedragon.png" class=" carouselimg d-block " alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Slaying The Dragon</h5>
+                          <p>Recomendação para desenvolvimento web.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="imgs/carousel/diolinux.jpg" class=" carouselimg d-block " alt="Logo da marca diolinux.">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Diolinux</h5>
+                          <p>Recomendação para conhecimentos gerais de Sistemas Operacionais.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="imgs/carousel/fireship.png" class="carouselimg d-block " alt="Logo da marca fireship.">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Fireship</h5>
+                          <p>Recomendação para se manter bem informado sobre programação.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="imgs/carousel/programmingwithmosh.jpg" class="carouselimg d-block " alt="Representação da marca programmingwithmosh.">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Programming With Mosh</h5>
+                          <p>Recomendação para cursos pagos e gratuitos de programação.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="imgs/carousel/freecodecamp.png" class="carouselimg d-block " alt="Logo da marca freecodecamp.">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>FreeCodeCamp</h5>
+                          <p>Recomendação para cursos gratuitos de programação.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+            </div>
+            </div>
         </section>
-        <section class = "profile  shadow p-4 mb-4 bg-white rounded">
+        <section class = "section profile  shadow  bg-white rounded">
             <div class="sectionTitle"><h2>Colegas de Trabalho</h2></div>
             <figure>
                 <img class = "colimg" src="imgs/people/Colega1.jpg" alt="Colega1"> 
@@ -104,8 +163,8 @@
             </figure>
         </section>
     </main>
-    <footer>
-        <p></p>
+    <footer class = " bg-body-tertiarye" >
+        <p class = "footer-text">Site construído por <strong>Theo Diniz Viana</strong>. Aluno da turma 2 de DIW.</p>
     </footer>
 </body>
 </html>
