final version STATIC

--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -57,8 +57,8 @@
           </div>
           <a href="https://www.linkedin.com/in/theo-diniz-viana-351967233/"><i
               class="fa-3x fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/theokiwi"><i class="fa-3x fa-brands fa-square-github"></i></a>
-          <a href="https://www.instagram.com/theobarao/"><i class="fa-3x fa-brands fa-square-instagramm"></i></a>
+          <a href="https://github.com/theokiwi" rel="noopener" target="_blank"><i class="fa-3x fa-brands fa-square-github"></i></a>
+          <a href="https://www.instagram.com/theobarao/" rel="noopener" target="_blank"><i class="fa-3x fa-brands fa-square-instagramm"></i></a>
         </div>
       </div>
     </section>
@@ -138,14 +138,19 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/imgs/carousel/slayingthedragon.png" class="carouselimg d-block" alt="..." />
+                  <div class="d-flex justify-content-center">
+                    <img src="/imgs/carousel/slayingthedragon.png" class="carouselimg d-block" alt="..." />
+                  </div>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Slaying The Dragon</h5>
                     <p>Recomendação para desenvolvimento web.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/imgs/carousel/diolinux.jpg" class="carouselimg d-block" alt="Logo da marca diolinux." />
+                  <div class="d-flex justify-content-center">
+                    <img src="/imgs/carousel/diolinux.jpg" class="carouselimg d-block" alt="Logo da marca diolinux." />
+                  </div>
+
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Diolinux</h5>
                     <p>
@@ -155,7 +160,10 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/imgs/carousel/fireship.png" class="carouselimg d-block" alt="Logo da marca fireship." />
+                  <div class="d-flex justify-content-center">
+                    <img src="/imgs/carousel/fireship.png" class="carouselimg d-block" alt="Logo da marca fireship." />
+                  </div>
+
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Fireship</h5>
                     <p>
@@ -165,8 +173,10 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/imgs/carousel/programmingwithmosh.jpg" class="carouselimg d-block"
-                    alt="Representação da marca programmingwithmosh." />
+                  <div class="d-flex justify-content-center">
+                    <img src="/imgs/carousel/programmingwithmosh.jpg" class="carouselimg d-block"
+                      alt="Representação da marca programmingwithmosh." />
+                  </div>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Programming With Mosh</h5>
                     <p>
@@ -176,8 +186,10 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/imgs/carousel/freecodecamp.png" class="carouselimg d-block"
-                    alt="Logo da marca freecodecamp." />
+                  <div class="d-flex justify-content-center">
+                    <img src="/imgs/carousel/freecodecamp.png" class="carouselimg d-block"
+                      alt="Logo da marca freecodecamp." />
+                  </div>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>FreeCodeCamp</h5>
                     <p>Recomendação para cursos gratuitos de programação.</p>
@@ -203,18 +215,20 @@
       <div class="sectionTitle">
         <h2>Colegas de Trabalho</h2>
       </div>
-      <figure>
-        <img class="colimg" src="/imgs/people/Colega1.jpg" alt="Colega1" />
-        <figcaption class="legimg">Maria Dos Anjos</figcaption>
-      </figure>
-      <figure>
-        <img class="colimg" src="/imgs/people/Colega2.jpeg" alt="Colega2" />
-        <figcaption class="legimg">Clarice Ferreira</figcaption>
-      </figure>
-      <figure>
-        <img class="colimg" src="/imgs/people/Colega3.jpeg" alt="Colega3" />
-        <figcaption class="legimg">Leticia Andrade</figcaption>
-      </figure>
+      <div class="cols">
+        <figure>
+          <img class="colimg" src="/imgs/people/Colega1.jpg" alt="Colega1" />
+          <figcaption class="legimg">Maria Dos Anjos</figcaption>
+        </figure>
+        <figure>
+          <img class="colimg" src="/imgs/people/Colega2.jpeg" alt="Colega2" />
+          <figcaption class="legimg">Clarice Ferreira</figcaption>
+        </figure>
+        <figure>
+          <img class="colimg" src="/imgs/people/Colega3.jpeg" alt="Colega3" />
+          <figcaption class="legimg">Leticia Andrade</figcaption>
+        </figure>
+      </div>
     </section>
   </main>
   <footer class="bg-body-tertiarye">
