--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -57,8 +57,10 @@
           </div>
           <a href="https://www.linkedin.com/in/theo-diniz-viana-351967233/"><i
               class="fa-3x fa-brands fa-linkedin"></i></a>
-          <a href="https://github.com/theokiwi" rel="noopener" target="_blank"><i class="fa-3x fa-brands fa-square-github"></i></a>
-          <a href="https://www.instagram.com/theobarao/" rel="noopener" target="_blank"><i class="fa-3x fa-brands fa-square-instagramm"></i></a>
+          <a href="https://github.com/theokiwi" rel="noopener" target="_blank"><i
+              class="fa-3x fa-brands fa-square-github"></i></a>
+          <a href="https://www.instagram.com/theobarao/" rel="noopener" target="_blank"><i
+              class="fa-3x fa-brands fa-square-instagramm"></i></a>
         </div>
       </div>
     </section>
@@ -76,6 +78,11 @@
           </p>
           <a href="https://github.com/theokiwi/simpledb" class="card-link">Git</a>
           <a href="/repopages/repdb.html" class="card-link">Conheça</a>
+          <div class="icons">
+            <i class="fa-solid fa-star"></i>
+            <p>1</p> <i class="fa-solid fa-user"></i>
+            <p>1</p>
+          </div>
         </div>
       </div>
       <div class="card border-primary mb-3" style="width: 18rem">
@@ -89,6 +96,11 @@
           </p>
           <a href="https://github.com/theokiwi/rockpaperscissors-patterns" class="card-link">Git</a>
           <a href="/repopages/reppatterns.html" class="card-link">Conheça</a>
+          <div class="icons">
+            <i class="fa-solid fa-star"></i>
+            <p>0</p> <i class="fa-solid fa-user"></i>
+            <p>0</p>
+          </div>
         </div>
       </div>
       <div class="card border-primary mb-3" style="width: 18rem">
@@ -101,6 +113,11 @@
           </p>
           <a href="https://github.com/theokiwi/TI-3-JogosDigitais" class="card-link">Git</a>
           <a href="/repopages/repti3.html" class="card-link">Conheça</a>
+          <div class="icons">
+            <i class="fa-solid fa-star"></i>
+            <p>0</p> <i class="fa-solid fa-user"></i>
+            <p>0</p>
+          </div>
         </div>
       </div>
       <div class="card border-primary mb-3" style="width: 18rem">
@@ -108,11 +125,16 @@
         <div class="card-body">
           <h5 class="card-title">personal-website</h5>
           <p class="card-text">
-            Meu primeiro site, uma página Web pessoal. Construída com: CSS,
+            Meu primeiro site, uma página Web pessoal, para a disciplina DIW. Construída com: CSS,
             HTML, Bootstrap, JavaScript.
           </p>
           <a href="https://github.com/theokiwi/personalwebsite" class="card-link">Git</a>
           <a href="/repopages/repwebsite.html" class="card-link">Conheça</a>
+          <div class="icons">
+            <i class="fa-solid fa-star"></i>
+            <p>0</p> <i class="fa-solid fa-user"></i>
+            <p>0</p>
+          </div>
         </div>
       </div>
     </section>
