--- a/repopages/repdb.html
+++ b/repopages/repdb.html
@@ -75,7 +75,7 @@
                     </li>
                     <li class = "repbullets">
                         <h4 class = "reptitles">Link de Acesso</h4>
-                        <a class = "repparagraph replinktitles" target="blank" href="https://github.com/theokiwi/simpledb">Me visite!</a>
+                        <a class = "repparagraph  replinktitles" target="blank" href="https://github.com/theokiwi/simpledb">Me visite!</a>
                     </li>
                     <li class = "repbullets">
                         <h4 class = "reptitles">Tópicos</h4>
@@ -88,6 +88,9 @@
                         </div>
                     </li>
                 </ul>
+                <div class="icons">
+              <i class="fa-solid fa-star"></i><p>1</p> <i class="fa-solid fa-user"></i><p>1</p>
+          </div>
             </div>
             <div class="imageforepo">
               <figure>
