--- a/repopages/repwebsite.html
+++ b/repopages/repwebsite.html
@@ -83,6 +83,9 @@
                         </div>
                     </li>
                 </ul>
+                <div class="icons">
+                  <i class="fa-solid fa-star"></i><p>0</p> <i class="fa-solid fa-user"></i><p>0</p>
+              </div>
             </div>
             <div class="imageforepo">
               <figure>
